[gd_scene load_steps=8 format=3 uid="uid://dmjnelyaocaag"]

[ext_resource type="Script" uid="uid://dpb1no0l8tqtp" path="res://scenes/objects/name_tag/name_tag.gd" id="1_17l7d"]
[ext_resource type="Script" uid="uid://21g4c8kgecht" path="res://scenes/utils/grabbing/grabbable.gd" id="2_bkfqh"]
[ext_resource type="FontFile" uid="uid://dk1yfg1jr6cwk" path="res://assets/UI/fonts/Doto/static/Doto-Black.ttf" id="3_sogi3"]
[ext_resource type="Script" uid="uid://ck6y410gncrcr" path="res://scripts/mouse_interaction_area2d.gd" id="4_c26nk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqef5"]
content_margin_left = 2.0
content_margin_right = 2.0
bg_color = Color(0.944163, 1, 0.471901, 1)
skew = Vector2(0.1, 0)
corner_radius_top_left = 6
corner_radius_top_right = 2
corner_radius_bottom_right = 6
corner_radius_bottom_left = 2

[sub_resource type="LabelSettings" id="LabelSettings_75mtp"]
line_spacing = 0.0
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17l7d"]

[node name="NameTag" type="Node2D"]
z_index = 5
script = ExtResource("1_17l7d")

[node name="Grabbable" type="Node" parent="." node_paths=PackedStringArray("parent", "interaction_area")]
script = ExtResource("2_bkfqh")
parent = NodePath("..")
interaction_area = NodePath("../MouseInteractionArea2D")
grab_priority = 2
grab_speed = 0
metadata/_custom_type_script = "uid://21g4c8kgecht"

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -9.16667
offset_right = 4.5
offset_bottom = 9.16667
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_sogi3")
theme_override_styles/normal = SubResource("StyleBoxFlat_wqef5")
text = "asd"
label_settings = SubResource("LabelSettings_75mtp")
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1

[node name="EditingPrompt" type="LineEdit" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.2813
offset_top = -27.0
offset_right = 21.2813
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
placeholder_text = "Nome"
alignment = 1
max_length = 20
expand_to_text_length = true
context_menu_enabled = false
virtual_keyboard_enabled = false
caret_blink = true

[node name="MouseInteractionArea2D" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 16
script = ExtResource("4_c26nk")
metadata/_custom_type_script = "uid://ck6y410gncrcr"

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseInteractionArea2D"]
shape = SubResource("RectangleShape2D_17l7d")

[connection signal="focus_exited" from="EditingPrompt" to="." method="_on_editing_prompt_focus_exited"]
[connection signal="text_submitted" from="EditingPrompt" to="." method="_on_editing_prompt_text_submitted"]
